cabal-version:      3.0
name:               bench
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Andreas Klebinger
maintainer:         klebinger.andreas@gmx.at
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable http2-dumb-bench
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base,
        http2 >= 5.2.4,
        bytestring >= 0.12.1.0,
        unliftio >= 0.2.25.0,
        network-run >= 0.3.0,
        http-types >= 0.12.4

    hs-source-dirs:   http2
    default-language: GHC2021

executable network-dumb-bench
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base,
        http2 >= 5.2.4,
        bytestring >= 0.12.1.0,
        network >= 3.2.0.0,
        network-run >= 0.3.0,

    hs-source-dirs:   network
    default-language: GHC2021
